got styles finished, continue to work on stretch of getting card to animate/anchor correctly

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,35 @@ main {
   border-radius: 5px;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.08);
   background-color: #ffffff;
-  order: -1;
+  /* order: -1; */
+  z-index: +1;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+}
+.expandedCardEven {
+  width: 569px;
+  height: 505px;
+  border-radius: 5px;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.08);
+  background-color: #ffffff;
+  /* order: -1; */
+  z-index: +1;
+  /* position: absolute;
+  top: 50px;
+  left: 50px; */
+}
+.expandedCardOdd {
+  width: 569px;
+  height: 505px;
+  border-radius: 5px;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.08);
+  background-color: #ffffff;
+  /* order: -1; */
+  z-index: +1;
+  /* position: absolute;
+  top: 50px;
+  left: 50px; */
 }
 
 .expandedCard img {
